workshop/plans/grafana-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
    name: grafana-gateway
    namespace: istio-system
spec:
    selector:
    istio: ingressgateway
    servers:
    - port:
        number: 15031
        name: https-grafana
        protocol: HTTPS
    tls:
        mode: SIMPLE
        serverCertificate: sds
        privateKey: sds
        credentialName: telemetry-gw-cert
    hosts:
    - "$TELEMETRY_DOMAIN"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: grafana-vs
    namespace: istio-system
spec:
    hosts:
    - "$TELEMETRY_DOMAIN"
    gateways:
    - grafana-gateway
    http:
    - match:
    - port: 15031
    route:
    - destination:
        host: grafana
        port:
            number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: grafana
    namespace: istio-system
spec:
    host: grafana
    trafficPolicy:
    tls:
        mode: DISABLE
---
